fix registry box alignment

--- a/app/assets/stylesheets/registry.css
+++ b/app/assets/stylesheets/registry.css
@@ -16,7 +16,7 @@
 }
 
 .registry-box-align {
-	margin-left: 80px;
+	margin-left: 60px;
 }
 
 #etsy-box {
